--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,24 +1,28 @@
 .container_banner{
-    width: 90%;
+    width: 1240px;
     height: 223px;
-    margin: 50px auto;
-    position: relative;
+    margin: 50px 0;
 }
 
 .img_banner{
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     border-radius: 30px;
     filter: brightness(80%);
+    border-radius: 25px;
 }
 
 h1{
+    border: solid 2px red;
+    height: 68px;
+    width: 705px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    margin: 0;
     text-align: center;
     font-family: 'Montserrat';
     font-style: normal;
