--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,33 +1,45 @@
 .container_banner{
     width: 1240px;
     height: 223px;
-    margin: 50px 0;
+    margin: 50px auto;
+    display: flex;
 }
 
-.img_banner{
+.img_banner {
     width: 100%;
     height: 100%;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
     border-radius: 30px;
-    filter: brightness(80%);
     border-radius: 25px;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-h1{
-    border: solid 2px red;
+.img_banner .dark_background {
+    background: #000000;
+    mix-blend-mode: darken;
+    opacity: 0.3;
+    border-radius: 25px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+.img_banner h1 {
     height: 68px;
     width: 705px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: absolute;
-    text-align: center;
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
     font-size: 48px;
     line-height: 68px;
     color: #FFFFFF;
+    position: relative;
+    z-index: 1;
 }
