--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,9 @@
     /* Header */
 header{
     width: 1240px;
-    margin: auto;
+    margin: 50px auto;
     display: flex;
     justify-content: space-between;
-    margin-top: 50px;
 }
 
     /* Logo */
