--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,6 +1,7 @@
     /* Header */
 header{
-    width: 1240px;
+    max-width: 1240px;
+    width: 90%;
     margin: 50px auto;
     display: flex;
     justify-content: space-between;
@@ -15,7 +16,7 @@ header{
     /* Nav */
 nav ul{
     display: flex;
-    width: 300px;
+    width: 270px;
     list-style: none;
     justify-content: space-between;
     padding: 0;
@@ -55,4 +56,35 @@ nav ul{
 .header_nav .home a:hover,
 .header_nav .about a:hover {
     text-decoration: underline;
-  }
+}
+
+/* Media queries */
+
+@media screen and (max-width: 767px) {
+
+    .logo{
+        height: 40px;
+        width: 125px;
+    }
+    .logo img{
+        width: 100%;
+        height: 100%;
+    }
+
+    nav ul{
+        width: 140px;
+    }
+    
+    .header_nav .home a{
+        font-size: 15px;
+    }    
+
+    .header_nav .about a{
+        font-size: 15px;
+    }
+
+    header{
+        margin: 15px auto;
+    }
+
+}
