--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -2,7 +2,8 @@
 .container_cards {
   background: #F7F7F7;
   border-radius: 25px;
-  width: 1240px;
+  max-width: 1240px;
+  width: 90%;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
@@ -12,6 +13,7 @@
 }
   
 .card {
+  position: relative;
   height: 340px;
   width: 340px;
   border-radius: 10px;
@@ -20,7 +22,7 @@
   background-position: center;
   text-decoration: none;
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
-  margin-bottom: 50px;
+  margin: 0 10px 50px 10px;
 }
 
 .card_overlay {
@@ -32,20 +34,14 @@
   
 .card h2 {
   position: absolute;
-  left: 5.88%;
-  right: 5.88%;
-  top: 78.82%;
-  bottom: 5.88%;
-
+  width: 50%;
+  bottom: 0px;
+  left: 15px;
   font-family: 'Montserrat';
   font-style: normal;
   font-weight: 500;
   font-size: 18px;
   line-height: 26px;
-
-  display: flex;
-  align-items: flex-end;
-
   color: #FFFFFF;
 }
 
@@ -53,4 +49,21 @@
   transform: scale(1.05);
   box-shadow: 0 5px 13px -2px #000000
 }
+
+/* Media Queries Mobile */
+
+@media (max-width: 767px) {
+  .container_cards {
+    background: none;
+    margin: auto;
+    padding-top: 0;
   
+  }
+  .card {
+    width: 100%;
+    max-width: 400px;
+    height: 230px;
+    margin: 20px 0;
+  }
+  
+}
