--- a/src/components/Collapse/Collapse.css
+++ b/src/components/Collapse/Collapse.css
@@ -1,9 +1,7 @@
 .collapse-container {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    max-width: 1023px;
+    width: 90%;
+    margin: auto;
 }
   
 .collapse-item {
@@ -11,7 +9,6 @@
 }
   
 .collapse-header {
-    width: 1023px;
     height: 47px;
     cursor: pointer;
     display: flex;
@@ -40,7 +37,6 @@
 }
   
 .collapse-content{
-    width: 1023px;
     background: #F7F7F7;
     border-radius: 5px;
     font-family: 'Montserrat';
@@ -49,11 +45,56 @@
     font-size: 24px;
     line-height: 34px;
     color: #FF6060;
-    padding: 10px;
+    padding: 20px;
     margin: 0;
 }
 
 .collapse-content ul{
     list-style: none;
     padding: 10px;
+}
+
+.property_collapse{
+    max-width: 1240px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.property_collapse .collapse-item{
+    width: 45%;
+}
+
+.collapse-header {
+    border-radius: 10px;
+}
+
+/* Media Queries Mobile */
+
+@media (max-width: 767px) {
+
+    .collapse-header {
+        height: 20px;
+    }
+
+    .collapse_title{
+    font-size: 16px;
+    }
+
+    .collapse-content{
+        font-size: 14px;
+        line-height: 18px
+    }
+
+    .collapse-item {
+        margin-bottom: 30px;
+    }
+
+    .property_collapse{
+        flex-direction: column;
+    }
+
+    .property_collapse .collapse-item{
+        width: 100%;
+    }    
+    
 }
