--- a/src/components/Host/Host.css
+++ b/src/components/Host/Host.css
@@ -1,13 +1,12 @@
-.container_host{
+.container_host {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
-    align-items: flex-end;
-}
-
+    justify-content: space-between;
+    height: 100%;
+  }
+    
 .name_picture{
     display: flex;
-    justify-content: center;
 	align-items: center;
 }
 
@@ -18,7 +17,7 @@
 }
 
 .host_name{
-    width: 93px;
+    width: 90px;
     height: 52px;
     font-family: 'Montserrat';
     font-style: normal;
@@ -29,5 +28,23 @@
     align-items: flex-end;
     text-align: right;
     color: #FF6060;
-    margin-right: 20px;
+    margin: 0 20px 0 0;
+}
+
+.host_rating {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 25px;
+}
+
+/* Media queries */
+
+@media screen and (max-width: 767px) {
+    .host_name{
+        margin: 0 10px 0 0;
+    }
+
+    .container_host{
+        margin-top: 20px;
+    }
 }
